fix error in visibility of info

--- a/src/components/CarouselHero/Carousel.module.css
+++ b/src/components/CarouselHero/Carousel.module.css
@@ -63,7 +63,6 @@
   z-index: 2;
   width: 100%;
   height: 100%;
-  opacity: 0;
 }
 
 .info .content {
